fix(currency-select): fix vertical align

--- a/app/blocks/select-currency/select-currency.scss
+++ b/app/blocks/select-currency/select-currency.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  cursor: pointer;
 
   &_active {
 
